<?xml version="1.0" encoding="utf-8"?>
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            	xmlns:android="http://schemas.android.com/apk/res/android" 
            >
<LinearLayout  
    android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:background="#000000">
    <LinearLayout 
		android:layout_width="fill_parent"		 
		android:layout_height="wrap_content"
		android:orientation="vertical">

	<TextView 
    		android:id="@+id/lbldev"
    		android:text="@string/lbldev"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:textStyle="bold"                        
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />      
    <TextView 
    		android:id="@+id/txtdev"
    		android:text="@string/txtdev"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="normal"            
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
    <TextView 
    		android:id="@+id/lbldate"
    		android:text="@string/lbldate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"/>
               
    <TextView 
    		android:id="@+id/txtdate"
    		android:text="@string/txtdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"/>
 	<TextView 
    		android:id="@+id/lblversion"
    		android:text="@string/lblversion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"/>            
    <TextView 
    		android:id="@+id/txtversion"
    		android:text="@string/txtversion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"/>
    <TextView 
    		android:id="@+id/lblmail"
    		android:text="@string/lblmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"/>
	<TextView 
    		android:id="@+id/txtmail"
    		android:text="@string/txtmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp" 
            android:clickable="true"/>
   
   <TextView 
    		android:id="@+id/lblcountry"
			android:text="@string/lblcountry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:layout_marginTop="10dp"
			android:textStyle="bold"
			android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
			android:textSize="15dp"/>            
    <TextView 
    		android:id="@+id/txtcountry"
			android:text="@string/txtcountry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:textStyle="normal"
			android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
			android:textSize="15dp"/>
     <TextView 
         	android:layout_marginTop="10dp"
         	android:id="@+id/lblagradecimientos"
			android:text="@string/lblagradecimientos"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:paddingTop="10dp"
			android:textStyle="bold"
			android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
			android:textSize="15dp"/>            
    <TextView 
    		android:id="@+id/txtagradecimientos"
			android:text="@string/txtagradecimientos"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:textStyle="normal"
			android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
			android:textSize="15dp"/>
       <TextView 
    		android:id="@+id/lblLinkFace"
			android:text="@string/lbllinkface"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:textStyle="normal"
			android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
			android:textSize="15dp"
			android:layout_marginTop="10dp"
			/>
    
    <TextView 
    		android:id="@+id/txtLinkFace"
    		android:text="@string/txtlinkface"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp" 
            android:autoLink="web"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:clickable="true"/>
    
	<ImageView		
	    	android:layout_marginTop="10dp"
	    	android:id="@+id/image"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
			android:src="@drawable/metros"
			android:layout_gravity="center_vertical|center_horizontal"
			android:contentDescription="@string/content"/>
	</LinearLayout>   
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:id="@+id/llBannerAD" 
		android:layout_height="80dp"
		android:orientation="vertical"
		android:paddingTop="10dp">
		</LinearLayout>                                                        
</LinearLayout>
        </ScrollView>
