<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:baselineAligned="false"
    	android:orientation="vertical"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent">
    	<LinearLayout 
		android:layout_width="fill_parent" 
		android:id="@+id/lblLogo" 
		android:layout_height="0dp"
		
		android:orientation="horizontal"
		android:layout_weight="0.30"
		android:gravity="center_horizontal">
    	<ImageView 
				android:id="@+id/imageViewLogo" 
				android:layout_width="wrap_content" 
				android:src="@drawable/metrosw" 
				android:layout_height="wrap_content"
				android:contentDescription="@string/content"				
				android:layout_gravity="center_horizontal"/>
		
		</LinearLayout>		
   		
		<LinearLayout
   		    android:id="@+id/lblFlecha"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:orientation="horizontal"
   		    android:layout_gravity="center_horizontal|top" >
    	<ImageView 
				android:id="@+id/flecha" 
				android:layout_width="match_parent" 
				android:src="@drawable/flechas" 
				android:layout_height="20dp"
				android:contentDescription="@string/content"
				android:layout_gravity="top"/>
    	</LinearLayout>
		    
		<LinearLayout
   		    android:id="@+id/lblFlecha2"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:orientation="horizontal"
   		    android:layout_gravity="center_horizontal|top" >
		<TextView 
    		android:id="@+id/menu"
    		android:text="@string/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FE9B05"
            android:textStyle="bold"                        
            android:textSize="35dp"
            android:layout_gravity="bottom"/>
	
		<TextView 
    		android:id="@+id/menu2"
    		android:text="@string/menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="bold"                        
            android:textSize="35dp"
            android:layout_gravity="bottom"/>
    	</LinearLayout>
		<android.support.v4.view.ViewPager
		    android:layout_width="wrap_content"
		    android:layout_height="0dp"
		    android:id="@+id/viewPager"
		    android:layout_gravity="center_horizontal"
		    android:layout_weight="0.40"/>
	<LinearLayout 
		android:layout_width="match_parent" 
		android:id="@+id/llBannerAD" 
		android:layout_height="0dp"
		android:orientation="horizontal"
		android:layout_weight="0.10">
	</LinearLayout>
</LinearLayout>
